[package]
name = "ztp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "=2.7.0"
actix-web = "4"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.29"
dotenv = "0.15.0"
chrono = "0.4.35"
cucumber = "0.20.2"
reqwest = { version = "0.12.2" , features = ["json"] }
tokio = "1.36.0"
actix-cors = "0.7.0"

[[test]]
name = "product"
harness = false  # allows Cucumber to print output instead of libtest
